--- a/notebooks/train_and_submit.ipynb
+++ b/notebooks/train_and_submit.ipynb
@@ -48,7 +48,7 @@
     "from pathlib import Path\n",
     "import numpy as np\n",
     "import pandas as pd\n",
-    "from collections import defaultdict\n",
+    "from collections import defaultdict, OrderedDict\n",
     "from typing import Dict, List, Optional, Tuple\n",
     "from dataclasses import dataclass\n",
     "\n",
@@ -63,8 +63,14 @@
     "from scipy.ndimage import median_filter, uniform_filter1d\n",
     "from tqdm.auto import tqdm\n",
     "\n",
-    "# Set random seed\n",
-    "pl.seed_everything(42)"
+    "try:\n",
+    "    import polars as pls\n",
+    "    HAS_POLARS = True\n",
+    "except ImportError:\n",
+    "    HAS_POLARS = False\n",
+    "\n",
+    "torch.set_float32_matmul_precision(\"high\")\n",
+    "pl.seed_everything(42)\n"
    ]
   },
   {
@@ -87,12 +93,16 @@
     "    'num_f_maps': 64,\n",
     "    'dropout': 0.5,\n",
     "    'threshold': 0.5,\n",
-    "    'min_duration': 5\n",
+    "    'min_duration': 5,\n",
+    "    'num_workers': 8,\n",
+    "    'prefetch_factor': 4,\n",
+    "    'tracking_cache_size': 6,\n",
+    "    'annotation_cache_size': 12\n",
     "}\n",
     "\n",
     "# Kaggle paths\n",
     "INPUT_DIR = Path(CONFIG['data_dir'])\n",
-    "OUTPUT_DIR = Path(CONFIG['output_dir'])"
+    "OUTPUT_DIR = Path(CONFIG['output_dir'])\n"
    ]
   },
   {
@@ -109,8 +119,8 @@
    "outputs": [],
    "source": [
     "class MABeDataset(Dataset):\n",
-    "    \"\"\"Dataset for MABe behavior recognition.\"\"\"\n",
-    "    \n",
+    "    \"\"\"Dataset for MABe behavior recognition with caching to reduce parquet I/O.\"\"\"\n",
+    "\n",
     "    def __init__(\n",
     "        self,\n",
     "        metadata_df: pd.DataFrame,\n",
@@ -119,7 +129,9 @@
     "        behaviors: Optional[List[str]] = None,\n",
     "        window_size: int = 256,\n",
     "        stride: int = 128,\n",
-    "        is_train: bool = True\n",
+    "        is_train: bool = True,\n",
+    "        tracking_cache_size: int = 4,\n",
+    "        annotation_cache_size: int = 8\n",
     "    ):\n",
     "        self.tracking_dir = Path(tracking_dir)\n",
     "        self.annotation_dir = Path(annotation_dir) if annotation_dir else None\n",
@@ -127,7 +139,9 @@
     "        self.stride = stride\n",
     "        self.is_train = is_train\n",
     "        self.metadata_df = metadata_df\n",
-    "        \n",
+    "        self.tracking_cache_size = max(1, tracking_cache_size)\n",
+    "        self.annotation_cache_size = max(1, annotation_cache_size)\n",
+    "\n",
     "        # Build behavior vocabulary\n",
     "        if behaviors is None:\n",
     "            self.behaviors = self._collect_behaviors()\n",
@@ -135,10 +149,19 @@
     "            self.behaviors = behaviors\n",
     "        self.behavior_to_idx = {b: i for i, b in enumerate(self.behaviors)}\n",
     "        self.num_classes = len(self.behaviors)\n",
-    "        \n",
+    "\n",
     "        # Build sample index\n",
     "        self.samples = self._build_samples()\n",
-    "        \n",
+    "\n",
+    "        # Simple LRU caches to keep recently used videos in memory\n",
+    "        self._tracking_cache: OrderedDict = OrderedDict()\n",
+    "        self._annotation_cache: OrderedDict = OrderedDict()\n",
+    "\n",
+    "    def _read_parquet(self, path: Path) -> pd.DataFrame:\n",
+    "        if HAS_POLARS:\n",
+    "            return pls.read_parquet(path).to_pandas()\n",
+    "        return pd.read_parquet(path)\n",
+    "\n",
     "    def _collect_behaviors(self) -> List[str]:\n",
     "        \"\"\"Collect unique behaviors from annotations.\"\"\"\n",
     "        if self.annotation_dir is None:\n",
@@ -147,25 +170,25 @@
     "        for _, row in self.metadata_df.iterrows():\n",
     "            ann_path = self.annotation_dir / row['lab_id'] / f\"{row['video_id']}.parquet\"\n",
     "            if ann_path.exists():\n",
-    "                ann_df = pd.read_parquet(ann_path)\n",
+    "                ann_df = self._read_parquet(ann_path)\n",
     "                behaviors.update(ann_df['action'].unique())\n",
     "        return sorted(list(behaviors))\n",
-    "    \n",
+    "\n",
     "    def _build_samples(self) -> List[Dict]:\n",
     "        \"\"\"Build sample index.\"\"\"\n",
     "        samples = []\n",
     "        for _, row in self.metadata_df.iterrows():\n",
     "            lab_id = row['lab_id']\n",
     "            video_id = row['video_id']\n",
-    "            \n",
+    "\n",
     "            track_path = self.tracking_dir / lab_id / f\"{video_id}.parquet\"\n",
     "            if not track_path.exists():\n",
     "                continue\n",
-    "                \n",
-    "            track_df = pd.read_parquet(track_path)\n",
+    "\n",
+    "            track_df = self._read_parquet(track_path)\n",
     "            n_frames = track_df['video_frame'].max() + 1\n",
     "            mice = track_df['mouse_id'].unique()\n",
-    "            \n",
+    "\n",
     "            for start in range(0, max(1, n_frames - self.window_size + 1), self.stride):\n",
     "                for agent in mice:\n",
     "                    for target in mice:\n",
@@ -178,22 +201,22 @@
     "                            'metadata': row.to_dict()\n",
     "                        })\n",
     "        return samples\n",
-    "    \n",
+    "\n",
     "    def __len__(self):\n",
     "        return len(self.samples)\n",
-    "    \n",
+    "\n",
     "    def __getitem__(self, idx):\n",
     "        sample = self.samples[idx]\n",
-    "        \n",
+    "\n",
     "        # Load tracking data\n",
     "        features = self._load_features(sample)\n",
-    "        \n",
+    "\n",
     "        # Load labels if available\n",
     "        if self.annotation_dir:\n",
     "            labels = self._load_labels(sample)\n",
     "        else:\n",
     "            labels = np.zeros((self.window_size, self.num_classes), dtype=np.float32)\n",
-    "        \n",
+    "\n",
     "        return {\n",
     "            'features': torch.from_numpy(features),\n",
     "            'labels': torch.from_numpy(labels),\n",
@@ -202,112 +225,159 @@
     "            'target_id': sample['target_id'],\n",
     "            'start_frame': sample['start_frame']\n",
     "        }\n",
-    "    \n",
+    "\n",
+    "    def _get_cached_tracking(self, lab_id: str, video_id: str):\n",
+    "        key = (lab_id, video_id)\n",
+    "        if key in self._tracking_cache:\n",
+    "            self._tracking_cache.move_to_end(key)\n",
+    "            return self._tracking_cache[key]\n",
+    "\n",
+    "        track_path = self.tracking_dir / lab_id / f\"{video_id}.parquet\"\n",
+    "        if not track_path.exists():\n",
+    "            return None\n",
+    "\n",
+    "        track_df = self._read_parquet(track_path)\n",
+    "        bodyparts = sorted(track_df['bodypart'].unique().tolist())\n",
+    "\n",
+    "        coords_by_mouse = {}\n",
+    "        for mouse_id in track_df['mouse_id'].unique():\n",
+    "            coords = self._extract_coords(track_df, mouse_id, bodyparts)\n",
+    "            coords_by_mouse[mouse_id] = coords\n",
+    "\n",
+    "        cache_entry = {'coords_by_mouse': coords_by_mouse}\n",
+    "        self._tracking_cache[key] = cache_entry\n",
+    "        if len(self._tracking_cache) > self.tracking_cache_size:\n",
+    "            self._tracking_cache.popitem(last=False)\n",
+    "        return cache_entry\n",
+    "\n",
+    "    def _get_cached_annotations(self, lab_id: str, video_id: str):\n",
+    "        if self.annotation_dir is None:\n",
+    "            return None\n",
+    "\n",
+    "        key = (lab_id, video_id)\n",
+    "        if key in self._annotation_cache:\n",
+    "            self._annotation_cache.move_to_end(key)\n",
+    "            return self._annotation_cache[key]\n",
+    "\n",
+    "        ann_path = self.annotation_dir / lab_id / f\"{video_id}.parquet\"\n",
+    "        if ann_path.exists():\n",
+    "            ann_df = self._read_parquet(ann_path)\n",
+    "        else:\n",
+    "            ann_df = None\n",
+    "\n",
+    "        self._annotation_cache[key] = ann_df\n",
+    "        if len(self._annotation_cache) > self.annotation_cache_size:\n",
+    "            self._annotation_cache.popitem(last=False)\n",
+    "        return ann_df\n",
+    "\n",
     "    def _load_features(self, sample) -> np.ndarray:\n",
     "        \"\"\"Load and preprocess tracking features.\"\"\"\n",
-    "        track_path = self.tracking_dir / sample['lab_id'] / f\"{sample['video_id']}.parquet\"\n",
-    "        track_df = pd.read_parquet(track_path)\n",
-    "        \n",
-    "        # Extract coordinates for agent and target\n",
-    "        agent_coords = self._extract_coords(track_df, sample['agent_id'])\n",
-    "        target_coords = self._extract_coords(track_df, sample['target_id'])\n",
-    "        \n",
+    "        cache_entry = self._get_cached_tracking(sample['lab_id'], sample['video_id'])\n",
+    "        if cache_entry is None:\n",
+    "            return np.zeros((self.window_size, 4), dtype=np.float32)\n",
+    "\n",
+    "        coords_by_mouse = cache_entry['coords_by_mouse']\n",
+    "        agent_coords = coords_by_mouse.get(sample['agent_id'])\n",
+    "        target_coords = coords_by_mouse.get(sample['target_id'])\n",
+    "\n",
+    "        if agent_coords is None or target_coords is None:\n",
+    "            return np.zeros((self.window_size, 4), dtype=np.float32)\n",
+    "\n",
     "        # Get window\n",
     "        start = sample['start_frame']\n",
     "        end = start + self.window_size\n",
-    "        \n",
+    "\n",
     "        agent_window = self._get_window(agent_coords, start, end)\n",
     "        target_window = self._get_window(target_coords, start, end)\n",
-    "        \n",
+    "\n",
     "        # Normalize\n",
     "        pix_per_cm = sample['metadata'].get('pix per cm (approx)', 1.0)\n",
     "        if pix_per_cm and pix_per_cm > 0:\n",
     "            agent_window = agent_window / pix_per_cm\n",
     "            target_window = target_window / pix_per_cm\n",
-    "        \n",
+    "\n",
     "        # Flatten and concatenate\n",
     "        features = np.concatenate([\n",
     "            agent_window.reshape(self.window_size, -1),\n",
     "            target_window.reshape(self.window_size, -1)\n",
     "        ], axis=-1)\n",
-    "        \n",
+    "\n",
     "        # Handle NaN\n",
     "        features = np.nan_to_num(features, nan=0.0)\n",
-    "        \n",
+    "\n",
     "        return features.astype(np.float32)\n",
-    "    \n",
-    "    def _extract_coords(self, track_df, mouse_id) -> np.ndarray:\n",
+    "\n",
+    "    def _extract_coords(self, track_df, mouse_id, bodyparts=None) -> np.ndarray:\n",
     "        \"\"\"Extract coordinates for a mouse.\"\"\"\n",
     "        mouse_df = track_df[track_df['mouse_id'] == mouse_id]\n",
     "        n_frames = track_df['video_frame'].max() + 1\n",
-    "        bodyparts = mouse_df['bodypart'].unique()\n",
-    "        \n",
+    "        if bodyparts is None:\n",
+    "            bodyparts = mouse_df['bodypart'].unique()\n",
+    "\n",
     "        coords = np.full((n_frames, len(bodyparts), 2), np.nan, dtype=np.float32)\n",
-    "        \n",
+    "\n",
     "        for i, bp in enumerate(bodyparts):\n",
     "            bp_df = mouse_df[mouse_df['bodypart'] == bp].sort_values('video_frame')\n",
     "            frames = bp_df['video_frame'].values\n",
     "            coords[frames, i, 0] = bp_df['x'].values\n",
     "            coords[frames, i, 1] = bp_df['y'].values\n",
-    "        \n",
+    "\n",
     "        return coords\n",
-    "    \n",
+    "\n",
     "    def _get_window(self, data, start, end) -> np.ndarray:\n",
     "        \"\"\"Extract window with padding.\"\"\"\n",
     "        n_frames = data.shape[0]\n",
-    "        \n",
+    "\n",
     "        if start < 0:\n",
     "            pre_pad = -start\n",
     "            start = 0\n",
     "        else:\n",
     "            pre_pad = 0\n",
-    "            \n",
+    "\n",
     "        if end > n_frames:\n",
     "            post_pad = end - n_frames\n",
     "            end = n_frames\n",
     "        else:\n",
     "            post_pad = 0\n",
-    "        \n",
+    "\n",
     "        window = data[start:end]\n",
-    "        \n",
+    "\n",
     "        if pre_pad > 0 or post_pad > 0:\n",
     "            pad_width = [(pre_pad, post_pad)] + [(0, 0)] * (window.ndim - 1)\n",
     "            window = np.pad(window, pad_width, mode='edge')\n",
-    "        \n",
+    "\n",
     "        return window\n",
-    "    \n",
+    "\n",
     "    def _load_labels(self, sample) -> np.ndarray:\n",
     "        \"\"\"Load annotation labels.\"\"\"\n",
     "        labels = np.zeros((self.window_size, self.num_classes), dtype=np.float32)\n",
-    "        \n",
-    "        ann_path = self.annotation_dir / sample['lab_id'] / f\"{sample['video_id']}.parquet\"\n",
-    "        if not ann_path.exists():\n",
+    "\n",
+    "        ann_df = self._get_cached_annotations(sample['lab_id'], sample['video_id'])\n",
+    "        if ann_df is None:\n",
     "            return labels\n",
-    "        \n",
-    "        ann_df = pd.read_parquet(ann_path)\n",
-    "        \n",
+    "\n",
     "        # Filter for this pair\n",
     "        pair_anns = ann_df[\n",
     "            (ann_df['agent_id'] == f\"mouse{sample['agent_id']}\") &\n",
-    "            ((ann_df['target_id'] == f\"mouse{sample['target_id']}\") | \n",
+    "            ((ann_df['target_id'] == f\"mouse{sample['target_id']}\") |\n",
     "             (ann_df['target_id'] == 'self'))\n",
     "        ]\n",
-    "        \n",
+    "\n",
     "        start = sample['start_frame']\n",
-    "        \n",
+    "\n",
     "        for _, row in pair_anns.iterrows():\n",
     "            action = row['action']\n",
     "            if action not in self.behavior_to_idx:\n",
     "                continue\n",
-    "            \n",
+    "\n",
     "            action_idx = self.behavior_to_idx[action]\n",
     "            window_start = max(0, row['start_frame'] - start)\n",
     "            window_end = min(self.window_size, row['stop_frame'] - start)\n",
-    "            \n",
+    "\n",
     "            if window_start < window_end:\n",
     "                labels[window_start:window_end, action_idx] = 1.0\n",
-    "        \n",
-    "        return labels"
+    "\n",
+    "        return labels\n"
    ]
   },
   {
@@ -547,7 +617,9 @@
     "    tracking_dir=INPUT_DIR / 'train_tracking',\n",
     "    annotation_dir=INPUT_DIR / 'train_annotation',\n",
     "    window_size=CONFIG['window_size'],\n",
-    "    stride=CONFIG['stride']\n",
+    "    stride=CONFIG['stride'],\n",
+    "    tracking_cache_size=CONFIG['tracking_cache_size'],\n",
+    "    annotation_cache_size=CONFIG['annotation_cache_size']\n",
     ")\n",
     "\n",
     "val_dataset = MABeDataset(\n",
@@ -556,12 +628,14 @@
     "    annotation_dir=INPUT_DIR / 'train_annotation',\n",
     "    behaviors=train_dataset.behaviors,\n",
     "    window_size=CONFIG['window_size'],\n",
-    "    stride=CONFIG['window_size']\n",
+    "    stride=CONFIG['window_size'],\n",
+    "    tracking_cache_size=CONFIG['tracking_cache_size'],\n",
+    "    annotation_cache_size=CONFIG['annotation_cache_size']\n",
     ")\n",
     "\n",
     "print(f\"Training samples: {len(train_dataset)}\")\n",
     "print(f\"Validation samples: {len(val_dataset)}\")\n",
-    "print(f\"Behaviors: {train_dataset.behaviors}\")"
+    "print(f\"Behaviors: {train_dataset.behaviors}\")\n"
    ]
   },
   {
@@ -575,22 +649,26 @@
     "    train_dataset,\n",
     "    batch_size=CONFIG['batch_size'],\n",
     "    shuffle=True,\n",
-    "    num_workers=4,\n",
-    "    pin_memory=True\n",
+    "    num_workers=CONFIG['num_workers'],\n",
+    "    pin_memory=True,\n",
+    "    prefetch_factor=CONFIG['prefetch_factor'] if CONFIG['num_workers'] > 0 else None,\n",
+    "    persistent_workers=CONFIG['num_workers'] > 0\n",
     ")\n",
     "\n",
     "val_loader = DataLoader(\n",
     "    val_dataset,\n",
     "    batch_size=CONFIG['batch_size'],\n",
     "    shuffle=False,\n",
-    "    num_workers=4,\n",
-    "    pin_memory=True\n",
+    "    num_workers=CONFIG['num_workers'],\n",
+    "    pin_memory=True,\n",
+    "    prefetch_factor=CONFIG['prefetch_factor'] if CONFIG['num_workers'] > 0 else None,\n",
+    "    persistent_workers=CONFIG['num_workers'] > 0\n",
     ")\n",
     "\n",
     "# Get input dimension from first sample\n",
     "sample = train_dataset[0]\n",
     "input_dim = sample['features'].shape[-1]\n",
-    "print(f\"Input dimension: {input_dim}\")"
+    "print(f\"Input dimension: {input_dim}\")\n"
    ]
   },
   {
@@ -628,8 +706,10 @@
     "    max_epochs=CONFIG['num_epochs'],\n",
     "    accelerator='auto',\n",
     "    callbacks=callbacks,\n",
-    "    log_every_n_steps=10\n",
-    ")"
+    "    log_every_n_steps=10,\n",
+    "    precision='16-mixed' if torch.cuda.is_available() else 32,\n",
+    "    benchmark=True\n",
+    ")\n"
    ]
   },
   {
@@ -696,17 +776,22 @@
     "    annotation_dir=None,\n",
     "    behaviors=train_dataset.behaviors,\n",
     "    window_size=CONFIG['window_size'],\n",
-    "    stride=CONFIG['window_size'] // 2\n",
+    "    stride=CONFIG['window_size'] // 2,\n",
+    "    tracking_cache_size=CONFIG['tracking_cache_size'],\n",
+    "    annotation_cache_size=CONFIG['annotation_cache_size']\n",
     ")\n",
     "\n",
     "test_loader = DataLoader(\n",
     "    test_dataset,\n",
     "    batch_size=CONFIG['batch_size'],\n",
     "    shuffle=False,\n",
-    "    num_workers=4\n",
+    "    num_workers=CONFIG['num_workers'],\n",
+    "    pin_memory=True,\n",
+    "    prefetch_factor=CONFIG['prefetch_factor'] if CONFIG['num_workers'] > 0 else None,\n",
+    "    persistent_workers=CONFIG['num_workers'] > 0\n",
     ")\n",
     "\n",
-    "print(f\"Test samples: {len(test_dataset)}\")"
+    "print(f\"Test samples: {len(test_dataset)}\")\n"
    ]
   },
   {
